# sci

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/modules/: AddSCI.cmake
include/sci/Driver/Audio/: LPcmDriver.h  MidiDriver.h
include/sci/Driver/Display/: Display.h
include/sci/Driver/Input/: Input.h
include/sci/Kernel/: Animate.h  Audio.h  Cels.h  Dialog.h  Event.h  FarData.h  Globals.h  GrTypes.h  Graphics.h  Kernel.h  Menu.h  Midi.h  Motion.h  Mouse.h  Palette.h  Picture.h  ResName.h  ResTypes.h  Resource.h  Restart.h  SaveGame.h  Selector.h  Sound.h  Sync.h  Text.h  View.h  VolLoad.h  Window.h
include/sci/Logger/: Log.h
include/sci/PMachine/: Object.h  PMachine.h  Script.h
include/sci/Utils/: Crypt.h  ErrMsg.h  FileIO.h  Format.h  List.h  Mutex.h  Path.h  Timer.h  Trig.h  Types.h
lib/: CMakeLists.txt
lib/Driver/: CMakeLists.txt
lib/Driver/Audio/: CMakeLists.txt  LPcmDriver.c  MidiDriver.c
lib/Driver/Display/: CMakeLists.txt  Display.c
lib/Driver/Input/: CMakeLists.txt  Input.c
lib/Kernel/: Animate.c  Audio.c  CMakeLists.txt  Cels.c  Dialog.c  Event.c  FarData.c  Graphics.c  Kernel.c  Menu.c  Midi.c  Motion.c  Mouse.c  Palette.c  Picture.c  ResName.c  Resource.c  Restart.c  SaveGame.c  Sound.c  Sync.c  Text.c  VolLoad.c  Window.c
lib/Logger/: CMakeLists.txt  Log.c
lib/PMachine/: CMakeLists.txt  Object.c  PMachine.c  Script.c
lib/Utils/: CMakeLists.txt  Crypt.c  ErrMsg.c  FileIO.c  Format.c  List.c  Mutex.c  Path.c  Timer.c  Trig.c
llvm/: Class.cpp  Class.hpp  Decl.cpp  Intrinsics.cpp  Intrinsics.hpp  Main.cpp  Method.cpp  Method.hpp  Object.cpp  Object.hpp  PMachine.cpp  PMachine.hpp  Procedure.cpp  Procedure.hpp  Property.cpp  Resource.hpp  Script.cpp  Script.hpp  SelectorTable.cpp  SelectorTable.hpp  Types.hpp  World.cpp  World.hpp
llvm/Passes/: AnalyzeMessagePass.cpp  AnalyzeMessagePass.hpp  AnalyzeObjectsPass.cpp  ExpandScriptIDPass.cpp  ExpandScriptIDPass.hpp  FixCodePass.cpp  FixCodePass.hpp  MutateCallIntrinsicsPass.cpp  MutateCallIntrinsicsPass.hpp  MutateCallvPass.cpp  MutateCallvPass.hpp  SplitSendPass.cpp  StackReconstructionPass.cpp  StackReconstructionPass.hpp  ValueOriginTracer.cpp  ValueOriginTracer.hpp  ValueRetracer.hpp
project/msvc/: SCI.sln
project/msvc/SCI/: SCI.vcxproj  SCI.vcxproj.filters
src/: Animate.c  Animate.h  Audio.c  Audio.h  Cels.c  Cels.h  Crypt.c  Dialog.c  Dialog.h  Display.c  Display.h  ErrMsg.c  ErrMsg.h  Event.c  Event.h  FarData.c  FarData.h  FileIO.c  FileIO.h  Globals.h  Graphics.c  Graphics.h  Input.c  Input.h  Kernel.c  Kernel.h  List.c  List.h  Log.c  Log.h  Main.c  Menu.c  Menu.h  Midi.c  MidiDriver.c  MidiDriver.h  Motion.c  Motion.h  Mouse.c  Mouse.h  (+33 more)
tools/: CMakeLists.txt
tools/game/: CMakeLists.txt  Main.c
tools/game-native/: CMakeLists.txt  Main.c  Object.c  PMachine.c  Script.c
utils/pmachine-llvm/: .clang-tidy  CMakeLists.txt  Class.cpp  Class.hpp  Decl.cpp  Decl.hpp  Intrinsics.cpp  Intrinsics.hpp  Main.cpp  Method.cpp  Method.hpp  Object.cpp  Object.hpp  PMachine.cpp  PMachine.hpp  Procedure.cpp  Procedure.hpp  Property.cpp  Property.hpp  PtrIterator.hpp  Resource.hpp  Script.cpp  Script.hpp  ScriptIterator.hpp  SelectorTable.cpp  SelectorTable.hpp  Types.hpp  World.cpp  World.hpp
utils/pmachine-llvm/Passes/: AnalyzeMessagePass.cpp  AnalyzeMessagePass.hpp  AnalyzeObjectsPass.cpp  AnalyzeObjectsPass.hpp  EmitScriptUtilitiesPass.cpp  EmitScriptUtilitiesPass.hpp  FixCodePass.cpp  FixCodePass.hpp  MutateCallIntrinsicsPass.cpp  MutateCallIntrinsicsPass.hpp  SplitSendPass.cpp  SplitSendPass.hpp  StackReconstructionPass.cpp  StackReconstructionPass.hpp  TranslateClassIntrinsicPass.cpp  TranslateClassIntrinsicPass.hpp  UnifyOverloadsPass.cpp  UnifyOverloadsPass.hpp  ValueRetracer.cpp
